fix: overflow scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&display=swap");
 
 #root {
   /* max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center; */
-  font-family: 'Inter', sans-serif;
+  font-family: "Montserrat", sans-serif;
+  fallback: "inter", sans-serif;
 }
 
 .logo {
